# Danzun

./: .gitignore  CMakeLists.txt  README.md  test.cpp  todo
data/lua/: game.lua  init.lua
devel/scripts/: mkheads
docs/: CMakeLists.txt  Doxyfile.in  key.dox  libraries.dox  mainpage.dox  programcallbacks.dox  style.css
docs/ar/: expressions.dox  main.dox
docs/ar/core/: .window.dox.swp  engine.dox  window.dox
docs/ar/expression/: pattern.dox  patternvars.dox
docs/ar/game/: Game.dox  effect.dox  element.dox  entity.dox  game.dox  player.dox  script.dox
docs/ar/media/: image.dox  sound.dox  util.dox
docs/ar/render/: bfffont.dox  matrix.dox  mesh.dox  shader.dox
frontend/: CMakeLists.txt
frontend/src/: main.cpp
src/: AbsTexture.cpp  AniControl.cpp  AniControl.h  Animation.cpp  Animation.h  Atlas.cpp  Atlas.h  BffFont.cpp  BffFont.h  Engine.cpp  Engine.h  EventCallback.h  Font.cpp  Font.h  Frame.cpp  Frame.h  Group.cpp  Group.h  Image.cpp  Image.h  ImgDisp.cpp  ImgDisp.h  IndexedTex.cpp  IndexedTex.h  ManImage.cpp  Node.cpp  Node.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Target.cpp  Target.h  Timer.cpp  Timer.h  ani.h  core.h  danzun.h  (+8 more)
src/ani/: AniControl.cpp  AniControl.h  Animation.cpp  Animation.h  Frame.cpp  Frame.h
src/api/: BffFont.cpp  BffFont.h  Effect.cpp  Effect.h  Element.cpp  Element.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Framebuffer.cpp  Framebuffer.h  Game.cpp  Game.h  Image.cpp  Image.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Music.cpp  Music.h  Pattern.cpp  Pattern.h  PatternVars.cpp  PatternVars.h  Player.cpp  Player.h  RenderConfig.cpp  RenderConfig.h  Script.cpp  Script.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  SoundEffect.cpp  SoundEffect.h  SpeakerConf.cpp  SpeakerConf.h  (+7 more)
src/audio/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Data.cpp  Data.h  Device.cpp  Device.h  Speaker.cpp  Speaker.h  Stream.cpp  Stream.h  signature.cpp  signature.h
src/cmake/: config.h.in
src/core/: Context.cpp  Context.h  Data.cpp  Data.h  Engine.cpp  Engine.h  EventCallback.cpp  debug.cpp  debug.h  error.cpp  error.h  pmeta.cpp  pmeta.h  util.cpp  util.h
src/frontend/: main.cpp
src/game/: AbsBulletType.cpp  AbsBulletType.h  AbstractBulletType.cpp  AbstractBulletType.h  BasicEnemy.cpp  BasicEnemy.h  BulletType.cpp  BulletType.h  Effect.cpp  Effect.h  Element.cpp  Element.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Group.cpp  Group.h  LuaRef.h  LuaRef.inl  Pattern.cpp  Pattern.h  PatternInst.cpp  PatternInst.h  Player.cpp  Player.h  Renderable.h
src/gfs/: Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
src/hb/: Circle.cpp  Circle.h  Hitbox.cpp  Hitbox.h  Polygon.cpp  Polygon.h
src/lib/: audio.h  glfw.h  opengl.h
src/lib/glad/: glad.c  glad.h
src/loader/: Data.cpp  Data.h  Init.h  Program.cpp  Program.h  Scene.h  Script.cpp  Script.h  ScriptVM.cpp  ScriptVM.h
src/loader/libs/: Framebuffer.h  Image.cpp  Image.h  Lib.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  engine.cpp  engine.h  game.cpp  game.h  shader.cpp  shader.h  util.cpp  util.h  window.cpp  window.h
src/math/: Circle.cpp  Circle.h  Hitbox.cpp  Hitbox.h  Line.cpp  Line.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h
src/ren/: Color.cpp  Color.h  Framebuffer.cpp  Matrix.cpp  Matrix.h  Mesh.cpp  Texture.cpp  Texture.h  state.h
src/render/: Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Target.cpp  Target.h  Texture.cpp  Texture.h
src/sprite/: AbsRenderConf.cpp  AbsRenderConf.h  AbsTexture.cpp  AbsTexture.h  Atlas.cpp  Atlas.h  Image.cpp  Image.h  ImgDisp.cpp  ImgDisp.h  IndexedTex.cpp  IndexedTex.h  ManImage.cpp  ManImage.h  Renderable.cpp  Sprite.cpp  Sprite.h
src/time/: Clock.cpp  Clock.h  Event.cpp  Event.h  Event.inl  RealTimer.cpp  RealTimer.h  Timer.cpp  Timer.h
src/ui/: BffFont.cpp  BffFont.h  Font.h  Node.h
src/win/: Cursor.cpp  Cursor.h  Events.h  KeyMods.cpp  KeyMods.h  Window.cpp  Window.h  WindowEvent.cpp  WindowEvent.h  enums.h
tests/: CMakeLists.txt  game.lua  manifest.xml  nice.lua  patterns.xml  test.dzs
tests/data/: bow-animation.json  game.lua
tests/data/scenes/: manifest.lua
tests/data/shaders/: animation.frag  animation.vert  basic.frag  manifest.lua  sprite.frag  text.vert
tests/data/sprites/: charge.json  manifest.lua
tests/data/stages/: manifest.lua
tests/scenes/: manifest.lua  menu.css  menu.xml
tests/shaders/: circle.frag  circle.vert  lazer.frag  lazer.vert  manifest.lua  sprite.vert  text.frag  text.vert
tests/sprites/: manifest.lua  player.json
tests/src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  GameScene.cpp  GameScene.h  Program.cpp  Program.h  main.cpp
tests/stages/: manifest.lua  one.lua
tests/stages/bullets/: Basic.lua
tests/stages/enemies/: Ghost.lua
